aws/privatelink-endpoint/privatelink.tf
data "aws_vpc" "privatelink" {
  id = var.vpc_id
}

data "aws_availability_zone" "privatelink" {
  for_each = var.subnets_to_privatelink
  zone_id = each.key
}

locals {
  network_id = split(".", var.dns_domain)[0]
}

resource "aws_security_group" "privatelink" {
  # Ensure that SG is unique, so that this module can be used multiple times within a single VPC
  name = "ccloud-privatelink_${local.network_id}_${var.vpc_id}"
  description = "Confluent Cloud Private Link minimal security group for ${var.dns_domain} in ${var.vpc_id}"
  vpc_id = data.aws_vpc.privatelink.id

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
//    cidr_blocks = [data.aws_vpc.privatelink.cidr_block]
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port = 9092
    to_port = 9092
    protocol = "tcp"
    //cidr_blocks = [data.aws_vpc.privatelink.cidr_block]
    cidr_blocks = ["10.0.0.0/16"]
  }
  /*
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
//    cidr_blocks = [data.aws_vpc.privatelink.cidr_block]
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 9092
    to_port = 9092
    protocol = "tcp"
    //cidr_blocks = [data.aws_vpc.privatelink.cidr_block]
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Owner       = var.owner
  }*/

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_vpc_endpoint" "privatelink" {
  vpc_id = data.aws_vpc.privatelink.id
  service_name = var.privatelink_service_name
  vpc_endpoint_type = "Interface"

  security_group_ids = [
    aws_security_group.privatelink.id
  ]

  //subnet_ids = [for zone, subnet_id in var.subnets_to_privatelink: subnet_id]
  subnet_ids = var.subnets_list
  private_dns_enabled = false

  tags = {
    owner       = var.owner
    Name        = "expose_enterprise_vpce"
  }
}

resource "aws_route53_zone" "privatelink" {
  name = var.dns_domain
  tags = {
    Owner       = var.owner
  }

  vpc {
    vpc_id = data.aws_vpc.privatelink.id
  }
}

resource "aws_route53_record" "privatelink" {
  count = length(var.subnets_to_privatelink) == 1 ? 0 : 1
  zone_id = aws_route53_zone.privatelink.zone_id
  name = "*.${aws_route53_zone.privatelink.name}"
  type = "CNAME"
  ttl  = "60"
  records = [
    aws_vpc_endpoint.privatelink.dns_entry[0]["dns_name"]
  ]
}

locals {
  endpoint_prefix = split(".", aws_vpc_endpoint.privatelink.dns_entry[0]["dns_name"])[0]
}

resource "aws_route53_record" "privatelink-zonal" {
  for_each = var.subnets_to_privatelink

  zone_id = aws_route53_zone.privatelink.zone_id
  name = length(var.subnets_to_privatelink) == 1 ? "*" : "*.${each.key}"
  type = "CNAME"
  ttl  = "60"
  records = [
    format("%s-%s%s",
      local.endpoint_prefix,
      data.aws_availability_zone.privatelink[each.key].name,
      replace(aws_vpc_endpoint.privatelink.dns_entry[0]["dns_name"], local.endpoint_prefix, "")
    )
  ]
}

output "vpc_endpoint_id" {
  value = aws_vpc_endpoint.privatelink.id
}
output "vpc_endpoint" {
  value = aws_vpc_endpoint.privatelink
}
